--- a/res/layout/in_time_activity.xml
+++ b/res/layout/in_time_activity.xml
@@ -14,15 +14,15 @@
         android:text="@string/start_time"
         />
     
-    <ListView
-        android:id="@+id/task_list"
+    <TextView
+        android:id="@+id/task_view"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         />
     
     <Button
-        android:id="@+id/play_pause_button"
+        android:id="@+id/start_pause_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/play_button"
